# ps2quake

./: .clang-format  .gitignore  CMakeLists.txt  README.md  plan
cmake/Toolchain/: ps2.cmake
src/: CMakeLists.txt  adivtab.h  anorm_dots.h  anorms.h  bspfile.h  cd_null.c  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  crc.c  cvar.c  cvar.h  d_edge.c  d_fill.c  d_iface.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  draw.c  draw.h  gl_draw.c  gl_mesh.c  (+89 more)
src/attic/: README
src/ps2/: cd_sky.c  cd_sky.cpp  snd_sky.c  snd_sky.cpp  sys_sky.c  sys_sky.cpp  vid_sky.cpp
src/ps2/stuff/: CMakeLists.txt  README.md
